# ncs-example-application

app/: CMakeLists.txt  Kconfig  Kconfig.defaults  prj.conf  sample.yaml
app/boards/: puuwai_nrf5340_cpuapp_1.overlay
app/dts/bindings/: power-switch.yaml
app/inc/: button.h  main.h  zbus_common.h
app/src/: main.c
app/src/audio/: CMakeLists.txt  Kconfig  audio_common.h  btm_audio.c  btm_audio.h  dsp_audio.c  dsp_audio.h
app/src/drivers/at_master/: CMakeLists.txt  Kconfig  at_btm.c  at_btm.h  at_common.c  at_common.h  at_dsp.c  at_dsp.h
app/src/led/: CMakeLists.txt  Kconfig  debug_led.c  debug_led.h  rgb_led.c  rgb_led.h  torch_led.c  torch_led.h
app/src/modules/: CMakeLists.txt  button_assignments.h  button_handler.c  button_handler.h  system.c  system.h
app/src/power/: CMakeLists.txt  Kconfig  pmic.c  pmic.h
boards/kiko/puuwai/: CMakeLists.txt  Kconfig  Kconfig.defconfig  Kconfig.puuwai  board.cmake  board.yml  nrf5340_cpuapp_common-pinctrl.dtsi  nrf5340_cpuapp_common.dtsi  nrf5340_cpunet_reset.c  puuwai_nrf5340_cpuapp.dts  puuwai_nrf5340_cpuapp.yaml  puuwai_nrf5340_cpuapp_defconfig  puuwai_nrf5340_cpuapp_ns.dts  puuwai_nrf5340_cpuapp_ns.yaml  puuwai_nrf5340_cpuapp_ns_defconfig  puuwai_nrf5340_cpunet-pinctrl.dtsi  puuwai_nrf5340_cpunet.dts  puuwai_nrf5340_cpunet.yaml  puuwai_nrf5340_cpunet_defconfig
drivers/: CMakeLists.txt
drivers/display/: CMakeLists.txt  Kconfig
drivers/display/ssd1357/: CMakeLists.txt  Kconfig  Kconfig.ssd1357  ssd1357.c
dts/bindings/display/: solomon,ssd1357.yaml
